# riffparse

./: .gitattributes  Cargo.toml
.github/workflows/: ci.yml
src/: avi.rs  fourcc.rs  io.rs  lib.rs  riff.rs
tests/: integration_test.rs  mp3.avi  mp3.avi.snapshot  test.avi  test.avi.snapshot
