[package]
name = "riffparse"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[features]
default = ["std"]
std = ["binrw/std", "binrw/verbose-backtrace"]
embedded-io = ["dep:embedded-io"]

[dependencies]
binrw = { version = "0.15.0", default-features = false }
embedded-io = { version = "0.6.1", default-features = false, features = ["alloc"], optional = true }
